# dev-portfolio

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
scripts/: generate-seo-assets.py
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
src/app/[industry]/: page.tsx
src/app/knead/: page.tsx
src/app/work/: page.tsx
src/components/industry/: industry-page.tsx
src/components/knead/: knead-page.tsx
src/components/portfolio/: about.tsx  capabilities.tsx  contact.tsx  hero.tsx  industries.tsx  nav-bar.tsx  work-page.tsx  work.tsx
src/components/seo/: structured-data.tsx
src/lib/: industries-data.ts  knead-data.ts  portfolio-data.ts  seo-config.ts
tool-results/: read_1782615372926_a03e4be60c7b.txt
upload/extracted/Forge-Studio/Forge-Studio/: README.md  worklog.md
upload/extracted/Forge-Studio/Forge-Studio/prisma/: schema.prisma
upload/extracted/Forge-Studio/Forge-Studio/src/app/: globals.css  layout.tsx  page.tsx
upload/extracted/Forge-Studio/Forge-Studio/src/components/builder/editor/: BuilderShell.tsx  Canvas.tsx  ExportDialog.tsx  Inspector.tsx  TopBar.tsx
upload/extracted/Forge-Studio/Forge-Studio/src/components/builder/sections/: AllSections.tsx  SectionRenderer.tsx
upload/extracted/Forge-Studio/Forge-Studio/src/components/builder/templates/: TemplatesGallery.tsx
upload/extracted/Forge-Studio/Forge-Studio/src/components/forge/: AuditorShell.tsx  Dashboard.tsx
upload/extracted/Forge-Studio/Forge-Studio/src/components/pixelforge/editor/: DeviceBar.tsx  LayerPanel.tsx  RightPanel.tsx
upload/extracted/Forge-Studio/Forge-Studio/src/components/pixelforge/modals/: ABModal.tsx  ExportModal.tsx  ImportModal.tsx  ToolsModal.tsx
upload/extracted/Forge-Studio/Forge-Studio/src/components/pixelforge/panels/: EditPanel.tsx  OGPanel.tsx  SharePanel.tsx
upload/extracted/Forge-Studio/Forge-Studio/src/lib/builder/sections/: registry.ts  renderer.ts  theme-utils.ts  types.ts
upload/extracted/Forge-Studio/Forge-Studio/src/lib/builder/store/: builder-store.ts
upload/extracted/Forge-Studio/Forge-Studio/src/lib/builder/templates/: templates.ts
upload/extracted/Forge-Studio/Forge-Studio/src/lib/forge/: store.ts
upload/extracted/Forge-Studio/Forge-Studio/src/lib/pixelforge/: types.ts
upload/extracted/Forge-Studio/Forge-Studio/src/lib/pixelforge/fixes/: quick-fixes.ts
upload/extracted/Forge-Studio/Forge-Studio/src/lib/pixelforge/scoring/: sample-page.ts
upload/extracted/Forge-Studio/Forge-Studio/src/lib/pixelforge/store/: pf-store.ts
upload/extracted/LandingForge-v4.0/LandingForge-v4.0/: README.md  worklog.md
upload/extracted/LandingForge-v4.0/LandingForge-v4.0/prisma/: schema.prisma
upload/extracted/LandingForge-v4.0/LandingForge-v4.0/src/app/: layout.tsx  page.tsx
upload/extracted/LandingForge-v4.0/LandingForge-v4.0/src/app/api/ai-copy/: route.ts
upload/extracted/LandingForge-v4.0/LandingForge-v4.0/src/components/landingforge/analytics/: AnalyticsDashboard.tsx
upload/extracted/LandingForge-v4.0/LandingForge-v4.0/src/lib/sections/: icons.ts  registry.ts  theme-utils.ts  types.ts
upload/extracted/LandingForge-v4.0/LandingForge-v4.0/src/lib/store/: editor-store.ts
upload/extracted/LandingForge-v4.0/LandingForge-v4.0/src/lib/templates/: templates.ts
upload/extracted/PixelForge-v19/PixelForge-v19/: README.md  eslint.config.mjs  worklog.md
upload/extracted/PixelForge-v19/PixelForge-v19/src/app/: layout.tsx  page.tsx
upload/extracted/lead-profiler (3)/lead-profiler/web-app/src/app/: page.tsx
upload/lead-profiler-haskell/lead-profiler-haskell/: LICENSE  README.md  cabal.project  lead-profiler-haskell.cabal
upload/lead-profiler-haskell/lead-profiler-haskell/app/: Main.hs
upload/lead-profiler-haskell/lead-profiler-haskell/corpus/lead-observation/: bare-keys.json  clean.json  extra-fields-and-trailing-prose.txt  fenced-with-prose.txt  prose-before-and-after.txt  single-quotes.json  smart-quotes.json  trailing-commas.json
upload/lead-profiler-haskell/lead-profiler-haskell/corpus/prospect-audit/: bare-keys.json  clean.json  fenced-with-prose.txt  single-quotes.json  smart-quotes.json  trailing-commas.json
upload/lead-profiler-haskell/lead-profiler-haskell/corpus/user-services/: bare-keys.json  clean.json  fenced-with-prose.txt  placeholders.json  single-quotes.json  smart-quotes.json  trailing-commas.json
upload/lead-profiler-haskell/lead-profiler-haskell/src/LeadProfiler/: Defaults.hs  Emit.hs  Lenient.hs  Prelude.hs  Validate.hs
upload/lead-profiler-haskell/lead-profiler-haskell/src/LeadProfiler/Emit/: Fixtures.hs  JsonSchema.hs  TypeScript.hs
upload/lead-profiler-haskell/lead-profiler-haskell/src/LeadProfiler/Schemas/: Common.hs  LeadObservation.hs  ProspectAudit.hs  UserServices.hs
upload/lead-profiler-haskell/lead-profiler-haskell/test/: Spec.hs
upload/lead-profiler-haskell/lead-profiler-haskell/test/LeadProfiler/: DefaultsSpec.hs  EmitSpec.hs  LenientSpec.hs  ValidateSpec.hs
upload/lead-profiler-haskell/lead-profiler-haskell/test/LeadProfiler/Schemas/: LeadObservationSpec.hs  ProspectAuditSpec.hs  UserServicesSpec.hs
(+40 files in other folders)
